AnalyticsController and AnalyticsServiceImpl is done.